--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -9,7 +9,7 @@ jobs:
   build-deploy:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@master
     - name: build
       uses: peaceiris/actions-hugo@v0.57.2
     - name: deploy
