--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,6 @@
-baseURL = "http://example.org/"
+baseURL = "./"
 languageCode = "en-us"
 title = "My New Hugo Site"
 theme = "ananke"
+RelativeURLs=true
+CanonifyURLs=true
