--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -10,6 +10,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@master
+    - run: git submodule init
+    - run: git submodule update
     - name: build
       uses: peaceiris/actions-hugo@v0.57.2
     - name: deploy
