--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -12,6 +12,7 @@ jobs:
     - uses: actions/checkout@master
     - run: git submodule init
     - run: git submodule update
+    - run: mkdir -p ./public
     - name: build
       uses: peaceiris/actions-hugo@v0.57.2
     - run: touch ./public/.nojekyll
