--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -17,9 +17,8 @@ jobs:
       uses: peaceiris/actions-hugo@v0.57.2
     - run: touch ./public/.nojekyll
     - name: deploy
-      uses: peaceiris/actions-gh-pages@v1.1.0
+      uses: JamesIves/github-pages-deploy-action@2.0.1
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        PUBLISH_BRANCH: gh-pages
-        PUBLISH_DIR: ./public
-
+        ACCESS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        BRANCH: gh-pages
+        FOLDER: public
