--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -17,9 +17,8 @@ jobs:
       uses: peaceiris/actions-hugo@v0.57.2
     - run: touch ./public/.nojekyll
     - name: deploy
-      uses: peaceiris/actions-gh-pages@v3.0.3
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        PUBLISH_BRANCH: gh-pages
-        PUBLISH_DIR: ./public
+      uses: peaceiris/actions-gh-pages@v3
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        publish_dir: ./public
 
